After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 787942 - ttmlparse: Doesn't implement default showBackground behaviour
ttmlparse: Doesn't implement default showBackground behaviour
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other All
: Normal normal
: 1.12.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-09-20 13:29 UTC by Chris Bass
Modified: 2017-10-19 14:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
TTML file demonstrating the problem (1.83 KB, text/xml)
2017-09-20 13:29 UTC, Chris Bass
  Details
Ensure default showBackground behaviour is observed (1.10 KB, patch)
2017-09-20 13:30 UTC, Chris Bass
committed Details | Review

Description Chris Bass 2017-09-20 13:29:38 UTC
Created attachment 360130 [details]
TTML file demonstrating the problem

In TTML the default value of the tts:showBackground attribute is "always", meaning that region backgrounds that don't have showBackground explicitly set should be always visible, even when no text is rendered into them. However, code in ttmlparse that assigns begin/end times to regions breaks this default behaviour.

Attached is a file which demonstrates the problem. The top region background should be visible at all times, even when no text is rendered into the region. You can view it with the following command:

gst-launch-1.0 ttmlrender name=r videotestsrc pattern="gradient" ! video/x-raw,width=1280,height=720 ! autovideoconvert ! r.video_sink filesrc blocksize=16777216 location=showBackground-default.xml ! ttmlparse ! r.text_sink r. ! ximagesink
Comment 1 Chris Bass 2017-09-20 13:30:43 UTC
Created attachment 360131 [details] [review]
Ensure default showBackground behaviour is observed
Comment 2 Sebastian Dröge (slomo) 2017-09-20 14:39:22 UTC
commit 3d2f004db23edecbdb4b0270266d3f93840d6e2a (HEAD -> master)
Author: Chris Bass <floobleflam@gmail.com>
Date:   Tue Sep 19 15:37:42 2017 +0100

    ttmlparse: Ensure default showBackground behaviour is enacted
    
    Ensure that region backgrounds are always show when tts:showBackground
    is not explicitly set, in accordance with the default behavour given in
    the TTML spec.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=787942