ttmlparse: Ensure default showBackground behaviour is enacted

Ensure that region backgrounds are always show when tts:showBackground
is not explicitly set, in accordance with the default behavour given in
the TTML spec.

https://bugzilla.gnome.org/show_bug.cgi?id=787942